Prevent buttons' text from wrapping

--- a/src/app.css
+++ b/src/app.css
@@ -100,6 +100,7 @@ button:focus-visible {
   border-radius: 0.5rem;
   color: #f9f9f9;
   transition-duration: 0.3s;
+  white-space: nowrap;
 }
 
 .footer a:hover {
